Add component base, refactor acievement and profile components